--- a/app/src/main/res/layout/github_user_item.xml
+++ b/app/src/main/res/layout/github_user_item.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cv_github_user_list"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,9 +15,8 @@
             android:layout_width="77dp"
             android:layout_height="match_parent"
             android:textAlignment="center"
-            android:layout_weight="0"
             android:src="@drawable/user2"
-            android:contentDescription="this is description"
+            android:contentDescription="@string/profile_picture"
             />
         <LinearLayout
             android:layout_width="0dp"
@@ -34,13 +34,13 @@
                     android:id="@+id/tv_github_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Jake Wharton"
+                    android:text="@string/full_name_template"
                     android:theme="@style/TextAppearance.AppCompat.Headline"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="humanoid"
+                    android:text="@string/username_template"
                     android:id="@+id/tv_github_username"
                     />
             </LinearLayout>
@@ -55,21 +55,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:theme="@style/TextAppearance.AppCompat.Caption"
-                    android:text="1024"/>
+                    android:text="@string/follower_count_template"/>
                 <TextView
                     android:id="@+id/tv_github_follower_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="2sp"
                     android:theme="@style/TextAppearance.AppCompat.Caption"
-                    android:text="followers,"
+                    android:text="@string/followers_with_coma"
                     />
                 <TextView
                     android:id="@+id/tv_github_repo_count"
                     android:layout_marginStart="8dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="23"
+                    android:text="@string/number_template"
                     android:theme="@style/TextAppearance.AppCompat.Caption"
                     />
                 <TextView
@@ -77,7 +77,7 @@
                     android:theme="@style/TextAppearance.AppCompat.Caption"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="repositories"/>
+                    android:text="@string/repositories"/>
             </LinearLayout>
         </LinearLayout>
 
