--- a/app/src/main/res/layout/github_user_item.xml
+++ b/app/src/main/res/layout/github_user_item.xml
@@ -8,7 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:padding="8dp"
+        android:paddingStart="8dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:paddingEnd="8dp"
         >
         <ImageView
             android:id="@+id/iv_github_profile"
