--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -51,18 +51,46 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_github_fullname" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_github_username">
+
+        <ImageView
+            android:contentDescription="@string/profile_picture"
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:foregroundTint="@color/purple_500"
+            android:foregroundTintMode="multiply"
+            app:srcCompat="@drawable/ic_round_location_city_24" />
+
+        <TextView
+            android:id="@+id/tv_github_user_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="My Location" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:baselineAligned="false"
         android:orientation="horizontal"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_github_username">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        tools:layout_editor_absoluteX="32dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -73,7 +101,8 @@
 
             <TextView
                 android:id="@+id/tv_github_follower_count"
-                style="@style/TextAppearance.AppCompat.Body1"
+                style="@style/JetBrainsMonoFontStyle.Count"
+                android:textFontWeight="700"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/follower_count_template" />
@@ -93,7 +122,8 @@
 
             <TextView
                 android:id="@+id/tv_github_following_count"
-                style="@style/TextAppearance.AppCompat.Body1"
+                style="@style/JetBrainsMonoFontStyle.Count"
+                android:textFontWeight="700"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/follower_count_template" />
@@ -113,7 +143,8 @@
 
             <TextView
                 android:id="@+id/tv_github_repo_count"
-                style="@style/TextAppearance.AppCompat.Body1"
+                style="@style/JetBrainsMonoFontStyle.Count"
+                android:textFontWeight="700"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/follower_count_template" />
