--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,19 +2,35 @@
     <!-- Base application theme. -->
     <style name="Theme.AplikasiGithubUser" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/sky_200</item>
+        <item name="colorPrimaryVariant">@color/sky_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/leaf_200</item>
+        <item name="colorSecondaryVariant">@color/leaf_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:textViewStyle">@style/JetBrainsMonoFontStyle</item>
     </style>
     <style name="AppTheme.noActionBar" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+    <style name="JetBrainsMonoFontStyle" parent="TextAppearance.AppCompat.Caption">
+        <item name="android:fontFamily">@font/jetbrains_mono_nl_regular</item>
+        <item name="android:letterSpacing">-0.05</item>
+    </style>
+    <style name="JetBrainsMonoFontStyle.Text">
+
+    </style>
+    <style name="JetBrainsMonoFontStyle.Count" parent="JetBrainsMonoFontStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="fontWeight">700</item>
+    </style>
+    <style name="JetBrainsMonoFontStyle.subhead" parent="JetBrainsMonoFontStyle">
+        <item name="color">@color/black</item>
     </style>
 </resources>
