--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -29,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
@@ -64,12 +65,12 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_github_username">
 
         <ImageView
-            android:contentDescription="@string/profile_picture"
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:layout_weight="0"
-            app:srcCompat="@drawable/ic_round_location_city_24"
+            android:contentDescription="@string/profile_picture"
+            app:srcCompat="@drawable/ic_baseline_location_on_24"
             app:tint="?attr/colorOnBackground" />
 
         <TextView
