feat: update icon launcher

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="my_dark">#FF333333</color>
     <color name="my_light">#FFDDDDDD</color>
 
-    <color name="sky_200">#E8B32E</color>
+    <color name="slate_200">#292C2C</color>
     <color name="sky_500">#FF384e77</color>
     <color name="sky_700">#FF18314f</color>
 
